# Prueba-Tecnica-CEU

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/workshops/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/workshops/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: http.ts  workshop.ts
frontend/src/api/mappers/: workshopMapper.ts
frontend/src/components/: ConfirmDialog.tsx  EditableWorkshopCard.tsx  WorkshopCard.tsx  WorkshopFormCard.tsx  WorkshopHeader.tsx  WorkshopList.tsx
frontend/src/hooks/: useScrolled.ts  useWorkshopEditing.ts  useWorkshopsController.ts
frontend/src/pages/: Home.tsx
frontend/src/types/: workshop.ts
